Fix space between content sections on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4215,6 +4215,8 @@ body.page-id-13 .hocus\:bg-primary-70:hover, body.page-id-13 .hocus\:bg-primary-
 
 [id*="form-submit"] [type="radio"]:checked + label { background-color: #fff; }
 
+[data-layout]:not(:nth-of-type(1)) > :nth-child(3) { display: none !important; }
+
 @media (min-width: 992px) {
   [data-layout] {
     margin-left: 0 !important;
